cluster-setup/k8s-backup/greetings-app/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"spring-boot-app","app.kubernetes.io/instance":"greetings-app"},"name":"spring-boot-app","namespace":"greetings-app"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"spring-boot-app"}},"template":{"metadata":{"labels":{"app":"spring-boot-app"}},"spec":{"containers":[{"image":"modock93/greetings-app:latest","name":"spring-boot-app","ports":[{"containerPort":8080}]}]}}}}
    creationTimestamp: "2024-06-30T18:25:53Z"
    generation: 2
    labels:
      app: spring-boot-app
      app.kubernetes.io/instance: greetings-app
    name: spring-boot-app
    namespace: greetings-app
    resourceVersion: "98180"
    uid: 037ea504-62b5-4a4f-8530-bf58c53cb4e8
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: spring-boot-app
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: spring-boot-app
      spec:
        containers:
        - image: modock93/greetings-app:latest
          imagePullPolicy: Always
          name: spring-boot-app
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2024-06-30T18:25:54Z"
      lastUpdateTime: "2024-06-30T18:26:21Z"
      message: ReplicaSet "spring-boot-app-5b748dd5ff" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2024-06-30T19:20:27Z"
      lastUpdateTime: "2024-06-30T19:20:27Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 2
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
