cluster-setup/k8s-backup/greetings-app/ingress.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"labels":{"app.kubernetes.io/instance":"greetings-app"},"name":"spring-boot-app-ingress","namespace":"greetings-app"},"spec":{"rules":[{"host":"10.43.169.253.nip.io","http":{"paths":[{"backend":{"service":{"name":"spring-boot-app","port":{"number":8080}}},"path":"/","pathType":"Prefix"}]}}]}}
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2024-06-30T18:58:15Z"
    generation: 2
    labels:
      app.kubernetes.io/instance: greetings-app
    name: spring-boot-app-ingress
    namespace: greetings-app
    resourceVersion: "97055"
    uid: 0e239269-c4aa-4335-9e82-374de2341c64
  spec:
    ingressClassName: traefik
    rules:
    - host: 10.43.169.253.nip.io
      http:
        paths:
        - backend:
            service:
              name: spring-boot-app
              port:
                number: 8080
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 172.20.0.3
      - ip: 172.20.0.4
      - ip: 172.20.0.5
      - ip: 172.20.0.6
kind: List
metadata:
  resourceVersion: ""
