cluster-setup/k8s-backup/greetings-app/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"greetings-app"},"name":"spring-boot-app","namespace":"greetings-app"},"spec":{"ports":[{"port":8080,"protocol":"TCP","targetPort":8080}],"selector":{"app":"spring-boot-app"},"type":"LoadBalancer"}}
    creationTimestamp: "2024-06-30T18:26:06Z"
    finalizers:
    - service.kubernetes.io/load-balancer-cleanup
    labels:
      app.kubernetes.io/instance: greetings-app
    name: spring-boot-app
    namespace: greetings-app
    resourceVersion: "95478"
    uid: ef922226-3e6a-491b-b8ea-a1053e18ebdb
  spec:
    allocateLoadBalancerNodePorts: true
    clusterIP: 10.43.169.253
    clusterIPs:
    - 10.43.169.253
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - nodePort: 30207
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: spring-boot-app
    sessionAffinity: None
    type: LoadBalancer
  status:
    loadBalancer:
      ingress:
      - ip: 172.20.0.3
      - ip: 172.20.0.4
      - ip: 172.20.0.5
      - ip: 172.20.0.6
kind: List
metadata:
  resourceVersion: ""
